# Tech-Content-Agent

./: .env.example  .gitignore  CHANGELOG.md  README.md  cdk.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: copilot-instructions.md
.github/hooks/: docs-sync.json
.github/instructions/: android.instructions.md  publishers.instructions.md  tests.instructions.md
.github/skills/project-qa/: SKILL.md
.github/skills/project-qa/references/: architecture-qa.md  configuration-qa.md  deployment-qa.md  development-qa.md  publishers-qa.md
.github/workflows/: ci.yml  deploy.yml
agent/: __init__.py  config.py  main.py
agent/models/: README.md  __init__.py
agent/prompts/: README.md  linkedin.md  summarize.md  system.md
agent/publishers/: README.md  __init__.py  base.py  blog.py  instagram.py  linkedin.py  youtube.py
agent/tools/: README.md  __init__.py  bedrock_summariser.py  deduplication.py  news_fetcher.py  post_generator.py  post_tracker.py
agent/workflows/: README.md  __init__.py  news_pipeline.md  news_pipeline.py
android/: .gitignore  build.gradle.kts  local.properties.example  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: ic_notification.xml
android/app/src/main/res/layout/: fragment_approval_detail.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/gradle/: libs.versions.toml
docs/: architecture.md  deployment.md  development.md  hitl-plan.md  roadmap.md
infrastructure/: README.md  app.py
infrastructure/constructs/: README.md  __init__.py
infrastructure/stacks/: README.md  __init__.py  agent_stack.py  scheduler_stack.py  secrets_stack.py  storage_stack.py
scripts/: README.md  run_local.py
scripts/hooks/: docs_sync.py  session_start.py
tests/: README.md  __init__.py  conftest.py  test_agent.py  test_bedrock_summariser.py  test_config.py  test_deduplication.py  test_models.py  test_news_fetcher.py  test_news_pipeline.py  test_post_generator.py
tests/publishers/: __init__.py  test_blog.py  test_instagram.py  test_linkedin.py  test_registry.py  test_youtube.py
tests/tools/: test_post_tracker.py
(+8 files in other folders)
