[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "tech-news-agent"
version = "0.1.0"
description = "AI agent that discovers tech news and publishes LinkedIn posts via AWS AgentCore and Amazon Bedrock"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "aws-cdk-lib>=2.140",
    "constructs>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "moto[all]>=5.0",
]

# =============================================================================
# Ruff configuration
# =============================================================================
[tool.ruff]
target-version = "py313"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "cdk.out",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # flake8-bandit (security)
    "N",   # pep8-naming
]
ignore = [
    "S101",  # assert statements are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["agent"]

# =============================================================================
# Black configuration
# =============================================================================
[tool.black]
line-length = 100
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | cdk\.out
  | build
  | dist
)/
'''

# =============================================================================
# pytest configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]

[tool.coverage.run]
source = ["agent"]
omit = ["tests/*", "infrastructure/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
